Update test and add fix from JDK-8328480